--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,17 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+.gitignore
+.idea/compiler.xml
+.idea/encodings.xml
+.idea/inspectionProfiles/
+.idea/misc.xml
+README.MD
+SpringBootJDK6.iml
+SpringBootJDK6.ipr
+pom.xml
+src/
+target/classes/META-INF/
+target/classes/application.properties
+target/classes/log4j2-spring.xml
+target/generated-sources/
