--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,29 @@
 # ---------------------------------------- # CORE PROPERTIES
 # ----------------------------------------
-debug=false
+debug=true
 
 # LOGGING
 #logging.config=classpath:log4j2-spring.xml
-logging.level.root=info
-logging.level.org.springframework.boot.autoconfigure=warn
-logging.level.org.springframework.web=warn
+logging.config=classpath:logback-spring.xml
+logging.level.root=debug
+logging.level.org.springframework.boot.autoconfigure=debug
+logging.level.org.springframework.web=debug
 logging.level.org.springframework.test=warn
-logging.level.org.springframework.core.LocalVariableTableParameterNameDiscoverer=warn
-logging.level.org.hibernate=info
-logging.level.org.hibernate.boot.registry.selector.internal.StrategySelectorImpl=warn
+logging.level.org.springframework.core.LocalVariableTableParameterNameDiscoverer=debug
+logging.level.org.hibernate=debug
+logging.level.org.hibernate.boot.registry.selector.internal.StrategySelectorImpl=debug
 logging.level.org.hibernate.type.BasicTypeRegistry=warn
 logging.level.org.hibernate.internal.SessionFactoryImpl=warn
-logging.level.com.zaxxer.hikari=info
-logging.level.org.springframework.boot.context.logging.ClasspathLoggingApplicationListener=warn
-logging.level.org.springframework.beans.factory.support.DefaultListableBeanFactory=warn
+logging.level.com.zaxxer.hikari=debug
+logging.level.org.springframework.boot.context.logging.ClasspathLoggingApplicationListener=debug
+logging.level.org.springframework.beans.factory.support.DefaultListableBeanFactory=debug
 
 # ----------------------------------------
 # WEB PROPERTIES
 # ----------------------------------------
 # EMBEDDED SERVER CONFIGURATION (ServerProperties)
 server.port=8080
-server.servlet.context-path=/a
+server.servlet.context-path=/
 server.tomcat.uri-encoding=UTF-8
 
 # JACKSON (JacksonProperties)
